--- a/Halloapp/pl.lproj/InfoPlist.strings
+++ b/Halloapp/pl.lproj/InfoPlist.strings
@@ -4,6 +4,9 @@
 /* Privacy - Camera Usage Description */
 "NSCameraUsageDescription" = "Umożliwia robienie zdjęć i nagrań bezpośrednio z poziomu aplikacji HalloApp.";
 
+/* Privacy - Contacts Usage Description */
+"NSContactsUsageDescription" = "Przyznaj aplikacji HalloApp dostęp do swoich kontaktów, żeby móc udostępniać wpisy i widzieć wpisy znajomych oraz rodziny.";
+
 /* Privacy - Microphone Usage Description */
 "NSMicrophoneUsageDescription" = "Pozwala to wykonywać połączenia, wysyłać posty i wiadomości audio, a także nagrywać wideo z dźwiękiem.";
 
