--- a/Notification Service Extension/fr.lproj/Localizable.strings
+++ b/Notification Service Extension/fr.lproj/Localizable.strings
@@ -19,6 +19,9 @@
 /* Title for generic Continue button. Mostly used to complete some modal flow. */
 "button.continue" = "Continuer";
 
+/* Title for generic copy URL button */
+"button.copy.link" = "Copier le lien";
+
 /* Title for generic Create button */
 "button.create" = "Créer";
 
@@ -85,6 +88,27 @@
 /* Describes what 'All Contacts' feed privacy setting means. */
 "feed.privacy.descr.only" = "Partager seulement avec les contacts sélectionnés";
 
+/* Button to dismiss edit favorites modal */
+"feed.privacy.list.dismiss.edit.favorites" = "Pas maintenant";
+
+/* Description of the alert shown to user indicating the author's post is only shown to the author's favorites audience */
+"feed.privacy.list.notOwn.only.description" = "Seules les personnes figurant dans la liste des favoris de %@ peuvent voir ce message.";
+
+/* Header for the favorites list when editing contacts to share with. */
+"feed.privacy.list.only.details" = "Qui verra ce message";
+
+/* Title of the alert shown to user indicating their post is only shown to their favorites audience */
+"feed.privacy.list.only.title" = "Favoris";
+
+/* Description of the alert shown to user indicating their post is only shown to their favorites audience */
+"feed.privacy.list.own.only.description" = "Seules les personnes figurant dans votre liste de favoris peuvent voir ce message.";
+
+/* Button to edit favorites */
+"feed.privacy.list.set.favorites" = "Définir les favoris";
+
+/* Description of the new Favorites functionality. */
+"feed.privacy.list.set.favorites.description" = "Vous pouvez maintenant créer une liste de vos contacts favoris, et partager vos publications HalloApp avec eux.";
+
 /* Text shown in notification when the user is added to a new group */
 "groups.add.notification" = "Tu as été ajouté à un nouveau groupe";
 
@@ -111,6 +135,9 @@
 
 /* Content for inviter notification. */
 "notification.invite.accepted.content" = "%@ vient d'accepter ton invitation à rejoindre HalloApp 🎉";
+
+/* New moment notification text to be shown to the user. */
+"notification.moment" = "Nouveau moment";
 
 /* New post notification text when post is multiple photos without caption. */
 "notification.n.photos" = "notification.n.photos";
@@ -139,8 +166,26 @@
 /* New post notification text when post is one video without caption. */
 "notification.one.video" = "📹 vidéo";
 
+/* Missed video call notification text to be shown to the user. */
+"notification.videocall.missed" = "📹 Appel vidéo manqué";
+
+/* Missed voice call notification text to be shown to the user. */
+"notification.voicecall.missed" = "☎️ Appel vocal manqué";
+
+/* New post notification text when post is a voice note. */
+"notification.voicecomment" = "🎤 Commentaire audio";
+
+/* New post notification text when post is a voice note. */
+"notification.voicenote" = "🎤 Note audio";
+
+/* New post notification text when post is a voice note. */
+"notification.voicepost" = "🎤 Message audio";
+
 /* String to auto-fill if a user tried to share to a friend. */
 "settings.share.text" = "Rejoignez mon réseau de relations réelles sur HalloApp. Téléchargez-le gratuitement sur halloapp.com/dl";
+
+/* Button to edit favorites list */
+"title.edit.favorites" = "Modifier votre liste de favoris";
 
 /* Row in Settings screen */
 "title.privacy" = "Confidentialité";
